@@ -1222,17 +1222,6 @@ package TestCase::Lib::SPVM::CORE {
     return 1;
   }
 
-  sub test_strerror : int () {
-    
-    my $error = strerror(SPVM::Errno->ENOENT);
-    
-    unless (length $error > 0) {
-      return 0;
-    }
-    
-    return 1;
-  }
-
   sub test_join : int () {
     my $strings = ["abc", "def", "hij"];
     
